google 만들기 숙제 완료

--- a/4_WebFront/2_CSS/css1/selector6.css
+++ b/4_WebFront/2_CSS/css1/selector6.css
@@ -15,7 +15,7 @@ div{
 
 .cls1{
     background-color: skyblue;
-    /* 동일한 우선 순위에선 마지막에 작성된 값이 적용됨 */
+    /* 동일한 우선 순위에서는 마지막에 작성된 값이 적용됨 */
 }
 
 /* 3순위 : 아이디 선택자 */
