--- a/4_WebFront/2_CSS/연습문제/practice1.css
+++ b/4_WebFront/2_CSS/연습문제/practice1.css
@@ -31,15 +31,18 @@ div{
     background-size: contain;
 }
 
-.container-1>div:first-child{
+.container-1>div:first-child>div{
+    width: 30px;
+    height: 30px;
     background-image: url(https://lh3.googleusercontent.com/ogw/AF2bZyhDjJUFE3pS2JnjWzCOBtYJHD4iS0wi9p7Lpuwd-cR5cWE=s32-c-mo);
     border-radius: 50%;
+    margin:auto;
 }
 
 
 
 .container-2>div{
-    width: 60%;
+    width: 350px;
     height: 300px;
     clear:both;
     background-image: url(../../images/googleLogo.png);
@@ -47,15 +50,18 @@ div{
     background-position:bottom;
     background-size: contain;
     margin:auto;
+    margin-bottom: 20px;
 }
 
 
 
 .container-3{
+    width: 90%;
     height: 50px;
-    border: 1px solid #7c7c7c;
+    border: 1px solid #949494;
     border-radius: 2em;
-    margin-bottom: 40px;
+    margin:auto;
+    margin-bottom: 60px;
 }
 
 .container-3>div>div{
@@ -64,12 +70,16 @@ div{
 }
 
 .container-3>div>div:first-child{
+    width:40px;
+    height: 40px;
     background-image: url(../../images/searchIcon.png);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: contain;
     float:left;
     border-radius: 50%;
     margin-left:10px;
+    margin-top: 5px;
 }
 
 .container-3>div>div:nth-child(2){
@@ -80,50 +90,99 @@ div{
 
 .container-3>div>div>input{
     border-width: 0;
-    font-size: 20px;
+    font-size: 16px;
+    outline: none;
 }
 
 .container-3>div>div:nth-child(3){
+    width:35px;
+    height: 35px;
     background-image: url(../../images/googleLens.png);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: contain;
     float:right;
     border-radius: 50%;
-    margin-right: 10px;
-    background-size: cover;
+    margin-right: 15px;
+    margin-top: 8px;
 }
 
 .container-3>div>div:last-child{
+    width:35px;
+    height: 35px;
     background-image: url(../../images/googleMic.png);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: contain;
     float:right;
     border-radius: 50%;
     margin-right: 20px;
-    background-size: cover;
+    margin-top: 8px;
 }
 
 
 
 .container-4{
-    height: 500px;
+    height: 120px;
 }
 
-.container-4>.row-1>div>div{
-    width:50px;
-    height:50px;
-}
-
-.row-1>div{
+.container-4>div{
     width: 25%;
     height: 50px;
-    float:left;
+    float: left;
+    box-sizing: border-box;
 }
 
-.circle{
-    background-color: #eee;
+
+
+.container-4>div>.circle{
+    width:50px;
+    height: 50px;
     border-radius: 50%;
-    background-repeat: no-repeat;
+    margin:auto;
+    background-color: #eee;
+    position: relative;
+}
+
+.icon{
+    width: 20px;
+    height: 20px;
     background-position: center;
-    float: left;
+    position:absolute;
+    top:30%;
+    left:31%;
+}
+
+#naver-icon{
+    background-image: url(../../images/NaverLogo.png);
+}
+
+#notion-icon{
+    background-image: url(../../images/notionIcon.png);
+}
+
+#chatGPT-icon{
+    background-image: url(../../images/chatGPTIcon.png);
+}
+
+#document-icon{
+    background-image: url(../../images/documentIcon.png);
+}
+
+#KHacademy-icon{
+    background-image: url(../../images/KHacademyIcon.png);
+}
+
+#google-icon{
+    background-image: url(../../images/googleIcon.png);
+}
+
+#youtube-icon{
+    background-image: url(../../images/youtubeIcon.png);
+}
+
+.container-4>.name{
+    height:40px;
+    line-height: 40px;
+    text-align: center;
 }
