--- a/4_WebFront/2_CSS/연습문제/practice1.css
+++ b/4_WebFront/2_CSS/연습문제/practice1.css
@@ -51,12 +51,13 @@ div{
     background-size: contain;
     margin:auto;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 
 
 .container-3{
-    width: 90%;
+    width: 80%;
     height: 50px;
     border: 1px solid #949494;
     border-radius: 2em;
@@ -123,7 +124,9 @@ div{
 
 
 .container-4{
+    width: 600px;
     height: 120px;
+    margin:auto;
 }
 
 .container-4>div{
@@ -188,17 +191,17 @@ div{
 }
 
 .setting{
-    width: 150px;
-    height: 30px;
-    line-height: 30px;
+    width: 200px;
+    height: 40px;
+    line-height: 40px;
     border: 1px solid #949494;
     position:fixed;
-    right:10px;
-    bottom:10px;
+    right:15px;
+    bottom:15px;
     border-radius: 2em;
     text-align: center;
     color:rgb(2, 112, 255);
-    font-size: 13px;
+    font-size: 17px;
     padding-right:5px;
 }
 
@@ -210,6 +213,6 @@ div{
     background-size: contain;
     float:left;
     border-radius: 50%;
-    margin-top:5px;
+    margin-top:10px;
     margin-left:10px;
 }
