--- a/4_WebFront/2_CSS/연습문제/google-style.css
+++ b/4_WebFront/2_CSS/연습문제/google-style.css
@@ -69,6 +69,7 @@ div{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 1px 3px 5px #c2c2c2;
 }
 
 .search-bar>div>div{
