--- a/4_WebFront/2_CSS/연습문제/starbucks-style.css
+++ b/4_WebFront/2_CSS/연습문제/starbucks-style.css
@@ -1,10 +1,6 @@
-*{box-sizing: border-box;}
-
-section{border 1px solid black;}
 
 main {
     width: 1140px;
-    border: 1px solid black;
     height: 750px;
 }
 
@@ -97,13 +93,35 @@ footer>section{
 
 .line-notice {
     height: 20%;
+    
 }
 
-.line-notice>section:first-child{
+.line-notice-left{
+    background-color: black;
     flex-basis:50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.line-notice>section:last-child{
+.line-notice-left span{
+    color: white;
+}
+
+.line-notice-left>a:nth-child(2){
+    padding-left: 20px;
+    padding-right: 50px;
+    color: white;
+    text-decoration: none;
+}
+
+.line-notice-left>button:nth-child(3){
+    cursor:pointer;
+    border-radius: 2em;
+}
+
+.line-notice-right{
+    background-color: white;
     flex-basis:50%;
 }
 
@@ -111,20 +129,97 @@ footer>section{
    height: 80%;
 }
 
+.reward-logo{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #reward-logo{
-    width: 100px;
-}
-.reward>section:first-child{
-    flex-basis: 28%;
+    width: 150px;
 }
 
-.reward>section:last-child{
-    flex-basis: 72%;
+.reward-cont{
+    flex-basis: 70%;
+    color: white;
 }
 
-.reward>section:last-child>section:first-child{
-    flex-basis: 50%;
+.reward-cont-top{
+    height:55%;
+    border-bottom: 1px solid rgb(139, 139, 139);
+    display: flex;
 }
 
-section {border: 1px solid red;}
+.reward-cont-top-left{
+    width: 75%;
+    display: flex;
+    flex-direction: column;
 
+}
+
+.reward-cont-top-left>span:first-child{
+    font-size: 22px;
+}
+
+.reward-cont-top-right{
+    width: 25%;
+}
+
+.reward-cont-top-right>div:first-child{
+    height: 50%;
+}
+
+.reward-cont-top-right>div:last-child{
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reward-cont-top-right>div:last-child>div:first-child{
+    width:55%;
+    background-color: rgb(0, 109, 45);
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.reward-cont-top-right>div:last-child>div:last-child{
+    width:45%;
+    border: 1px solid white;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.reward-cont-top>span:first-child{
+    font-size: 22px;
+}
+
+.reward-cont-bottom{
+    height: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.reward-cont-bottom-left{
+    width: 75%;
+    height: 100%;
+    font-size: 14px;
+}
+
+.reward-cont-bottom-right{
+    width: 25%;
+    border: 1px solid white;
+    text-align: center;
+    border-radius: 5px;
+}
+
+
+section {border  1px solid red;}
+div{border  1px solid blue;}
