--- a/4_WebFront/화면프로젝트/김세하/main.css
+++ b/4_WebFront/화면프로젝트/김세하/main.css
@@ -2,17 +2,262 @@ div{
     border: 1px solid black;
 }
 
+section{
+    border: 1px solid red;
+}
+
+/* 헤더 시작 */
 header{
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid blue;
     width: 100%;
     display: flex;
     height: 40px;
+    margin-bottom: 15px;
 }
 
-header>div:nth-child(1){
+header div{
+    height: 40px;
+}
+
+.header-left{
+    display: flex;
+    align-items: center;
+}
+
+.header-left>div:nth-child(1){
     width: 60px;
+    height: 35px;
+    background-image: url(img/hamburger-menu.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
-header>div:nth-child(2){
+.header-left>div:nth-child(2){
+    width: 110px;
     background-image: url(img/YouTubeLogo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.header-center{
+    width: 550px;
+    height: 40px;
+    margin: auto;
+    border: 1px solid #c4c4c4;
+    border-radius: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
+
+.header-center>div:nth-child(1){
+    height: 20px;
+    width: 20px;
+    background-image: url(img/keyboard.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.header-center>div:nth-child(2){
+    height: 30px;
+    width: 40px;
+    background-image: url(img/cancel.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.header-center>div:nth-child(3){
+    height: 30px;
+    width: 60px;
+    background-image: url(img/magnify.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    border-left: 1px solid #c4c4c4;
+}
+
+.header-right{
+    display: flex;
+    align-items: center;
+}
+
+.header-right>div:nth-child(1) {
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+.header-right>div:nth-child(2){
+    width:250px;
+}
+
+.header-right>div:nth-child(3) {
+    height: 40px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-right>div:nth-child(4) {
+    height: 35px;
+    width: 100px;
+    display: flex;
+    align-items: center;
+    border: 1px solid #c4c4c4;
+    border-radius: 2em;
+    font-size: 14px;
+    color: rgb(14, 113, 241);
+    cursor: pointer;
+}
+
+.header-right>div:nth-child(4)>div{
+    height: 30px;
+    width: 30px;
+    background-image: url(img/login.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    margin: 0 5px;
+}
+/* 헤더 끝 */
+
+/* 메인 시작 */
+main{
+    display: flex;
+}
+
+.sidebar{
+    width: 300px;
+    height: 100vh;
+}
+
+.sidebar-home{
+    display:flex;
+    align-items: center;
+}
+.sidebar-home>div:nth-child(1){
+    width: 50px;
+    height: 30px;
+    background-image: url(img/home.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.sidebar>div:nth-child(1)>div:nth-child(2){
+    display: flex;
+    align-items: center;
+}
+
+.main-center{
+    width: 100%;
+}
+
+.banner {
+    width: 100%;
+}
+
+.bannerImage {
+    height: 175px;
+    background-image: url(img/YouTubeBanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 1em;
+    margin-bottom: 20px;
+}
+
+.channel-logo {
+    width: 170px;
+    height: 170px;
+    display: inline-block;
+    background-image: url(img/channel-logo.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    border-radius: 50%;
+    margin: 0 10px;
+}
+
+.channel-content{
+    display: inline-block;
+    align-items: center;
+}
+
+.channel-content>p:nth-child(1){
+    font-size: 37px;
+    font-weight: bold;
+    margin: 0px;
+}
+
+.channel-content>p:nth-child(2){
+    font-size: 14px;
+    margin: 2px;
+}
+
+.channel-content>p:nth-child(3){
+    font-size: 14px;
+    color: #464646
+}
+
+.channel-content>p:nth-child(4){
+    font-size: 14px;
+}
+
+.channel-content>p:nth-child(4)>a{
+    text-decoration: none;
+}
+
+.subscribe{
+    background-color: black;
+    color: white;
+    width: 60px;
+    height: 35px;
+    border-radius: 2em;
+}
+
+.nav{
+    height: 40px;
+    display: flex;
+    align-items: center;
+    margin: 15px;
+    border-bottom: 1px solid #c4c4c4;
+}
+
+.nav>div{
+    height: 40px;
+    display: flex;
+    align-items: center;
+    margin: 0 12px;
+}
+
+.main-video{
+    display: flex;
+    align-items: center;
+}
+
+.black-mamba-content{
+    display: inline-block;
+    margin-left: 20px;
+    font-size: 14px;
+}
+
+.black-mamba-content>p:nth-child(3){
+    width: 500px;
+}
+
+.black-mamba-content>p:nth-child(2){
+    color: #464646;
+}
+
+.black-mamba-content>p:nth-child(3)>a{
+    text-decoration: none;
 }
