--- a/4_WebFront/화면프로젝트/김세하/css/main.css
+++ b/4_WebFront/화면프로젝트/김세하/css/main.css
@@ -1,14 +1,5 @@
-div{
-    border: 1px solid black;
-}
-
-section{
-    border: 1px solid red;
-}
-
 /* 헤더 시작 */
 header{
-    border: 1px solid blue;
     width: 100%;
     display: flex;
     height: 40px;
@@ -27,14 +18,14 @@ header div{
 .header-left>div:nth-child(1){
     width: 60px;
     height: 35px;
-    background-image: url(img/hamburger-menu.png);
+    background-image: url(../img/hamburger-menu.png);
     background-repeat: no-repeat;
     background-size: contain;
 }
 
 .header-left>div:nth-child(2){
     width: 110px;
-    background-image: url(img/YouTubeLogo.png);
+    background-image: url(../img/YouTubeLogo.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -55,7 +46,7 @@ header div{
 .header-center>div:nth-child(1){
     height: 20px;
     width: 20px;
-    background-image: url(img/keyboard.png);
+    background-image: url(../img/keyboard.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -64,7 +55,7 @@ header div{
 .header-center>div:nth-child(2){
     height: 30px;
     width: 40px;
-    background-image: url(img/cancel.png);
+    background-image: url(../img/cancel.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -73,7 +64,7 @@ header div{
 .header-center>div:nth-child(3){
     height: 30px;
     width: 60px;
-    background-image: url(img/magnify.png);
+    background-image: url(../img/magnify.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -107,67 +98,86 @@ header div{
     align-items: center;
 }
 
-.header-right>div:nth-child(4) {
-    height: 35px;
-    width: 100px;
-    display: flex;
-    align-items: center;
-    border: 1px solid #c4c4c4;
+.loginBtn{
+    width: 90px;
+    height: 40px;
+    background-color: white;
+    color: #0084f0;
+    border: 1px solid #eee;
     border-radius: 2em;
-    font-size: 14px;
-    color: rgb(14, 113, 241);
+    display:flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
 }
 
-.header-right>div:nth-child(4)>div{
-    height: 30px;
-    width: 30px;
-    background-image: url(img/login.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    margin: 0 5px;
+.loginBtn:hover{
+    background-color: #bce6ff;
 }
+
 /* 헤더 끝 */
 
 /* 메인 시작 */
 main{
     display: flex;
+    margin-left: 5px;
 }
-
+/* 사이드바 시작 */
 .sidebar{
-    width: 300px;
+    width: 240px;
     height: 100vh;
 }
 
-.sidebar-home{
-    display:flex;
-    align-items: center;
-}
-.sidebar-home>div:nth-child(1){
-    width: 50px;
-    height: 30px;
-    background-image: url(img/home.png);
-    background-repeat: no-repeat;
-    background-size: contain;
+.sidebar-block {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
 }
 
-.sidebar>div:nth-child(1)>div:nth-child(2){
+.sidebar-block > div {
+    height: 37px;
     display: flex;
     align-items: center;
+    border-radius: 10px;
 }
+
+.sidebar-block > div:hover{
+    background-color: #eee;
+    cursor: pointer;
+}
+
+.sidebar-block p{
+    font-size: 15px;
+    margin-left: 20px;
+}
+
+.sidebar-block>p{
+    margin: 5px;
+}
+
+.sidebar-login{
+    padding: 10px 10px;
+    border-bottom: 1px solid #eee;
+}
+
+.sidebar-login>p{
+    font-size: 14px;
+}
+
+/* 사이드바 끝 */
 
 .main-center{
     width: 100%;
+    margin-left: 50px;
 }
 
+/* 배너 및 채널 정보 */
 .banner {
     width: 100%;
 }
 
 .bannerImage {
     height: 175px;
-    background-image: url(img/YouTubeBanner.jpg);
+    background-image: url(../img/YouTubeBanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -179,7 +189,7 @@ main{
     width: 170px;
     height: 170px;
     display: inline-block;
-    background-image: url(img/channel-logo.jpg);
+    background-image: url(../img/channel-logo.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -223,6 +233,7 @@ main{
     height: 35px;
     border-radius: 2em;
 }
+/* 배너 및 채널 정보 끝 */
 
 .nav{
     height: 40px;
@@ -244,20 +255,25 @@ main{
     align-items: center;
 }
 
-.black-mamba-content{
+.player-content{
     display: inline-block;
     margin-left: 20px;
     font-size: 14px;
 }
 
-.black-mamba-content>p:nth-child(3){
+.player-content>p:nth-child(2){
+    color: #464646;
+    font-size: 13px;
+}
+
+.player-content>p:nth-child(3){
     width: 500px;
 }
 
-.black-mamba-content>p:nth-child(2){
-    color: #464646;
+.player-content>p:nth-child(3)>a{
+    text-decoration: none;
 }
 
-.black-mamba-content>p:nth-child(3)>a{
-    text-decoration: none;
+.player-content>p:nth-child(5){
+    color:#464646;
 }
