--- a/4_WebFront/화면프로젝트/김세하/css/createAccount1.css
+++ b/4_WebFront/화면프로젝트/김세하/css/createAccount1.css
@@ -87,4 +87,46 @@ main{
     background-color: #eee;
 }
 
+.login-bottom>div:hover{
+    cursor: pointer;
+    background-color: #eee;
+}
+
+.login-bottom>div:nth-child(2){
+    width: 50%;
+}
+
+.login-bottom>div:nth-child(3){
+    width: 65px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 13px;
+    margin: 0 5px;
+}
+
+.login-bottom>div:nth-child(4){
+    width: 150px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 13px;
+    margin: 0 5px;
+}
+
+.login-bottom>div:nth-child(5){
+    width: 50px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 13px;
+    margin: 0 5px;
+}
+
 /* 로그인 하단 끝 */
